# vulkan-course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vulkan-course.code-workspace
assets/: CMakeLists.txt
assets/shaders/primitive/: primitive.frag  primitive.vert
cmake/: config.cmake
cmake/tools/: VCCompileShaders.cmake
code/: main.cpp
code/core/: glfw-header.hpp  types.hpp  window.cpp  window.hpp
code/core/info/: project.hpp  project.hpp.in
code/engine/graphics/: device.cpp  device.hpp  pipeline-config.cpp  pipeline-config.hpp  pipeline.cpp  pipeline.hpp  swap-chain.cpp  swap-chain.hpp  vulkan-instance.cpp  vulkan-instance.hpp
code/engine/resources/: model.cpp  model.hpp
code/game/: game_instance.cpp  game_instance.hpp
code/game/toys/: serpinsky_triangle.cpp  serpinsky_triangle.hpp
docs/schemes/: architecture.drawio
